# youtube-captions

./: .gitignore  Cargo.toml  rustfmt.toml
src/: error.rs  lib.rs  scraper.rs
src/format/: json3.rs  mod.rs  srv1.rs  srv2.rs  srv3.rs  ttml.rs
src/snapshots/: youtube_captions__scraper__tests__srv1__minimal_formatting.snap  youtube_captions__scraper__tests__srv1__srv1_is_deserialized.snap  youtube_captions__scraper__tests__srv2_is_deserialized.snap  youtube_captions__scraper__tests__srv3_is_deserialized.snap
tests/: srv1.rs  srv2.rs  srv3.rs
tests/helpers/: mod.rs
